makes design for portfolio html

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -3,16 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -44,9 +37,7 @@
                   alt="twitter"
                 /></div
             ></a>
-            <a
-              href="https://www.instagram.com/vjast_/"
-              target="_blank"
+            <a href="https://www.instagram.com/vjast_/" target="_blank"
               ><div class="small-circle">
                 <img
                   class="icon"
@@ -157,41 +148,34 @@
             <div class="section-title">
               <h2 class="aboutMe-h2">About Me</h2>
               <p class="aboutMe-p">
-                I am a talented, ambitious and hardworking individual,
-                with broad skills and experience in mobile and web
-                developing, social media and leading projects. A key
-                strength is communication; building strong
-                relationships with people in order to deliver the best
-                results.
+                I am a talented, ambitious and hardworking individual, with
+                broad skills and experience in mobile and web developing, social
+                media and leading projects. A key strength is communication;
+                building strong relationships with people in order to deliver
+                the best results.
               </p>
             </div>
           </div>
           <div class="right-left-container">
             <div>
               <div class="left-col-img">
-                <img
-                  class="about-icon"
-                  src="./images/iconics.jpg"
-                  alt=""
-                />
+                <img class="about-icon" src="./images/iconics.jpg" alt="" />
               </div>
             </div>
             <div class="mid-container">
               <div class="right-col-information">
                 <h3>UI/UX Designer & Web Developer</h3>
                 <p class="aboutMe-p">
-                  Exceptionally creative and dependable Entry Level
-                  Web Developer with a stellar customer service record
-                  and superb work ethic. Broadly and deeply
-                  knowledgeable in a wide variety of computer
-                  languages as well as the principles and techniques
+                  Exceptionally creative and dependable Entry Level Web
+                  Developer with a stellar customer service record and superb
+                  work ethic. Broadly and deeply knowledgeable in a wide variety
+                  of computer languages as well as the principles and techniques
                   of website construction and maintenance.
                 </p>
                 <div class="ul-container">
                   <ul class="left-ul">
                     <li class="left-li">
-                      <span class="bold">Birthday:</span> 13 September
-                      2000
+                      <span class="bold">Birthday:</span> 13 September 2000
                     </li>
                     <li class="left-li">
                       <span class="bold">Website:</span>
@@ -201,14 +185,11 @@
                       <span class="bold">Phone:</span> 09452272264
                     </li>
                     <li class="left-li">
-                      <span class="bold">College:</span> STI College
-                      Global City
+                      <span class="bold">College:</span> STI College Global City
                     </li>
                   </ul>
                   <ul class="right-ul">
-                    <li class="right-li">
-                      <span class="bold">Age:</span> 21
-                    </li>
+                    <li class="right-li"><span class="bold">Age:</span> 21</li>
                     <li class="right-li">
                       <span class="bold">Year:</span> 3rd Year College
                     </li>
@@ -222,11 +203,10 @@
                   </ul>
                 </div>
                 <p class="aboutMe-p">
-                  Hard-working Information Technology major student
-                  (1.29 GWA) currently attending STI College global
-                  City, with 4 months of work experience. Frequently
-                  praised as diligent by my peers, I can be relied
-                  upon to help your company achieve its goals.
+                  Hard-working Information Technology major student (1.29 GWA)
+                  currently attending STI College global City, with 4 months of
+                  work experience. Frequently praised as diligent by my peers, I
+                  can be relied upon to help your company achieve its goals.
                 </p>
               </div>
             </div>
@@ -237,8 +217,8 @@
         <div class="skill-desc">
           <h2 class="aboutMe-h2">Skills</h2>
           <p class="aboutMe-p">
-            These are the skills that I have learned while studying at
-            STI Collge Global City. Along with my self-study.
+            These are the skills that I have learned while studying at STI
+            Collge Global City. Along with my self-study.
           </p>
         </div>
         <div class="skill-container">
