--- a/Project.html
+++ b/Project.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/DesktopView.css" />
+    <link rel="stylesheet" href="css/MobileView.css" />
     <title>Project</title>
   </head>
   <body>
@@ -58,7 +59,7 @@
               ><div class="small-circle">
                 <img
                   class="icon"
-                  src="./images/linked.svg"
+                  src="../images/linked.svg"
                   alt="twitter"
                 /></div
             ></a>
@@ -71,7 +72,7 @@
                 <a class="nav-links" href="index.html">
                   <img
                     class="nav-icon"
-                    src="./images/home.svg"
+                    src="../images/home.svg"
                     alt="home icon"
                   />
                   &nbsp; Home</a
@@ -81,7 +82,7 @@
                 <a class="nav-links" href="AboutMe.html">
                   <img
                     class="nav-icon"
-                    src="./images/user.svg"
+                    src="../images/user.svg"
                     alt="user icon"
                   />
                   &nbsp; About Me</a
@@ -91,7 +92,7 @@
                 <a class="nav-links" href="Profile.html">
                   <img
                     class="nav-icon"
-                    src="./images/file.svg"
+                    src="../images/file.svg"
                     alt="file icon"
                   />
                   &nbsp; Profile</a
@@ -101,7 +102,7 @@
                 <a class="nav-links" href="Project.html">
                   <img
                     class="nav-icon"
-                    src="./images/folder.svg"
+                    src="../images/folder.svg"
                     alt="folder icon"
                   />
                   &nbsp; Portfolio</a
@@ -111,7 +112,7 @@
                 <a class="nav-links" href="Certificates.html">
                   <img
                     class="nav-icon"
-                    src="./images/server.svg"
+                    src="../images/server.svg"
                     alt="server icon"
                   />
                   &nbsp;Certificates</a
@@ -121,7 +122,7 @@
                 <a class="nav-links" href="#Contacts">
                   <img
                     class="nav-icon"
-                    src="./images/envelope.svg"
+                    src="../images/envelope.svg"
                     alt="envelope icon"
                   />
                   &nbsp; Contact</a
@@ -138,6 +139,89 @@
               <span class="blue">Jastoni Villanueva</span>
             </p>
           </footer>
+        </div>
+      </div>
+      <div>
+        <div class="project-container">
+          <h2>Accomplished Projects</h2>
+          <div class="project-section">
+            <h3>Mobile Application: Diaeta</h3>
+            <div class="row-split">
+              <img src="../projects/Diaeta.png" alt="" />
+              <p>
+                Diaeta is a simple, user-friendly weight loss app that focuses
+                on calorie monitoring and weight tracking. It is a health care
+                application for dietary plans and healthy lifestyle. Diaeta
+                calculates your daily calorie needs and creates a unique weight
+                loss strategy based on your weight, age, and health goals. This
+                application was developed by our team in 2019 when we are
+                practicing for cluster division of Tagisan ng Talino at STI
+                College.
+              </p>
+            </div>
+          </div>
+          <div class="project-section">
+            <h3>Restaurant Management System</h3>
+            <div class="row-split">
+              <img src="../projects/RMS.png" alt="" />
+              <p>
+                A restaurant management system (RMS) is a sort of point-of-sale
+                software intended primarily for restaurants, bars, food trucks,
+                and other food service establishments. Unlike a point-of-sale
+                system, RMS covers all back-end requirements, including as
+                inventory and personnel management. This serve as our second
+                project after the Diaeta app when we were practicing for the
+                cluster division at STI College Tagisan ng Talino in 2019.
+              </p>
+            </div>
+          </div>
+          <div class="project-section">
+            <h3>Web Based: Basic Calculator</h3>
+            <div class="row-split">
+              <img src="../projects/Basic Calculator.PNG" alt="" />
+              <p>
+                This is a web-based calculator that I have made using HTML, CSS,
+                and Javascript. This calculator can perform simple basic
+                operations like addition, subtraction, multiplication, and
+                division. This is one of my first projects using Javascript and
+                the reason behind developing this simple calculator was to
+                enhance my knowledge of using the Javascript language.
+              </p>
+            </div>
+          </div>
+          <div class="project-section">
+            <h3>C#: DigiServe</h3>
+            <div class="row-split">
+              <img class="digiserve" src="../projects/Digiserve.PNG" alt="" />
+              <p>Description</p>
+            </div>
+          </div>
+          <div class="project-section">
+            <h3>Network Proposal</h3>
+            <div class="row-split">
+              <img class="datacom" src="../projects/Data Com.png" alt="" />
+              <p>Description</p>
+            </div>
+          </div>
+          <!-- Hamburger Menu For Mobile View-->
+          <div class="menu-wrap">
+            <input type="checkbox" class="toggler" />
+            <div class="hamburger"><div></div></div>
+            <div class="menu">
+              <div>
+                <div>
+                  <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="AboutMe.html">About Me</a></li>
+                    <li><a href="Profile.html">Profile</a></li>
+                    <li><a href="Project.html">Project</a></li>
+                    <li><a href="Certificates.html">Certificates</a></li>
+                    <li><a href="#Contacts">Contact</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
