--- a/Project.html
+++ b/Project.html
@@ -147,60 +147,101 @@
           <div class="project-section">
             <h3>Mobile Application: Diaeta</h3>
             <div class="row-split">
-              <img src="../projects/Diaeta.png" alt="" />
-              <p>
-                Diaeta is a simple, user-friendly weight loss app that focuses
-                on calorie monitoring and weight tracking. It is a health care
-                application for dietary plans and healthy lifestyle. Diaeta
-                calculates your daily calorie needs and creates a unique weight
-                loss strategy based on your weight, age, and health goals. This
-                application was developed by our team in 2019 when we are
-                practicing for cluster division of Tagisan ng Talino at STI
-                College.
-              </p>
+              <img id="diaeta" src="../projects/Diaeta.png" alt="" />
+              <div class="mid">
+                <p>
+                  Diaeta is a simple, user-friendly weight loss app that focuses
+                  on calorie monitoring and weight tracking. It is a health care
+                  application for dietary plans and healthy lifestyle. Diaeta
+                  calculates your daily calorie needs and creates a unique
+                  weight loss strategy based on your weight, age, and health
+                  goals. This application was developed by our team in 2019 when
+                  we are practicing for cluster division of Tagisan ng Talino at
+                  STI College.
+                </p>
+                <a
+                  class="noLine"
+                  href="https://github.com/vjastoni/Diaeta"
+                  target="_blank"
+                  ><button class="button-container">Go to Link</button></a
+                >
+              </div>
             </div>
           </div>
           <div class="project-section">
             <h3>Restaurant Management System</h3>
             <div class="row-split">
-              <img src="../projects/RMS.png" alt="" />
-              <p>
-                A restaurant management system (RMS) is a sort of point-of-sale
-                software intended primarily for restaurants, bars, food trucks,
-                and other food service establishments. Unlike a point-of-sale
-                system, RMS covers all back-end requirements, including as
-                inventory and personnel management. This serve as our second
-                project after the Diaeta app when we were practicing for the
-                cluster division at STI College Tagisan ng Talino in 2019.
-              </p>
+              <img id="rms" src="../projects/RMS.png" alt="" />
+              <div class="mid">
+                <p>
+                  A restaurant management system (RMS) is a sort of
+                  point-of-sale software intended primarily for restaurants,
+                  bars, food trucks, and other food service establishments.
+                  Unlike a point-of-sale system, RMS covers all back-end
+                  requirements, including as inventory and personnel management.
+                  This serve as our second project after the Diaeta app when we
+                  were practicing for the cluster division at STI College
+                  Tagisan ng Talino in 2019.
+                </p>
+                <a
+                  class="noLine"
+                  href="https://github.com/vjastoni/Restaurant-Management-System"
+                  target="_blank"
+                  ><button class="button-container">Go to Link</button></a
+                >
+              </div>
             </div>
           </div>
           <div class="project-section">
             <h3>Web Based: Basic Calculator</h3>
             <div class="row-split">
-              <img src="../projects/Basic Calculator.PNG" alt="" />
-              <p>
-                This is a web-based calculator that I have made using HTML, CSS,
-                and Javascript. This calculator can perform simple basic
-                operations like addition, subtraction, multiplication, and
-                division. This is one of my first projects using Javascript and
-                the reason behind developing this simple calculator was to
-                enhance my knowledge of using the Javascript language.
-              </p>
+              <img id="calc" src="../projects/Basic Calculator.PNG" alt="" />
+              <div class="mid">
+                <p>
+                  This is a web-based calculator that I have made using HTML,
+                  CSS, and Javascript. This calculator can perform simple basic
+                  operations like addition, subtraction, multiplication, and
+                  division. This is one of my first projects using Javascript
+                  and the reason behind developing this simple calculator was to
+                  enhance my knowledge of using the Javascript language.
+                </p>
+                <button class="button-container">Go to Link</button>
+              </div>
             </div>
           </div>
           <div class="project-section">
             <h3>C#: DigiServe</h3>
             <div class="row-split">
-              <img class="digiserve" src="../projects/Digiserve.PNG" alt="" />
-              <p>Description</p>
+              <img
+                id="digis"
+                class="digiserve"
+                src="../projects/Digiserve.PNG"
+                alt=""
+              />
+              <div class="mid">
+                <p>Description</p>
+                <a
+                  class="noLine"
+                  href="https://github.com/vjastoni/DigiServe"
+                  target="_blank"
+                  ><button class="button-container">Go to Link</button></a
+                >
+              </div>
             </div>
           </div>
           <div class="project-section">
             <h3>Network Proposal</h3>
             <div class="row-split">
-              <img class="datacom" src="../projects/Data Com.png" alt="" />
-              <p>Description</p>
+              <img
+                id="thesis"
+                class="datacom"
+                src="../projects/Data Com.png"
+                alt=""
+              />
+              <div class="mid">
+                <p>Description</p>
+                <button class="button-container">Go to Link</button>
+              </div>
             </div>
           </div>
           <!-- Hamburger Menu For Mobile View-->
