adds tablet view design

--- a/Profile.html
+++ b/Profile.html
@@ -3,22 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin
-    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/DesktopView.css" />
     <link rel="stylesheet" href="./css/MobileView.css" />
+    <link rel="stylesheet" href="css/TabletView.css" />
     <title>Profile</title>
   </head>
   <body>
@@ -44,9 +38,7 @@
                   alt="twitter"
                 /></div
             ></a>
-            <a
-              href="https://www.instagram.com/vjast_/"
-              target="_blank"
+            <a href="https://www.instagram.com/vjast_/" target="_blank"
               ><div class="small-circle">
                 <img
                   class="icon"
@@ -153,13 +145,13 @@
       <div class="profile-container">
         <section class="profile-section">
           <div class="section-title">
-            <h2 class="aboutMe-h2">What are my Objectives?</h2>
-            <p class="aboutMe-p">
-              I want to gain confidence and greatness using my
-              potential in the field of Front end Web Development and
-              express my innovative creative skills for self and my
-              future company growth. After 2-3 years of experience, I
-              want to pursue my career as a full-stack Web Developer.
+            <h2 class="aboutMes-h2">What are my Objectives?</h2>
+            <p class="aboutMes-p">
+              I want to gain confidence and greatness using my potential in the
+              field of Front end Web Development and express my innovative
+              creative skills for self and my future company growth. After 2-3
+              years of experience, I want to pursue my career as a full-stack
+              Web Developer.
             </p>
           </div>
         </section>
@@ -174,8 +166,8 @@
               <div class="information-summary">
                 <h4>Jastoni Villanueva</h4>
                 <p class="summary-p">
-                  A 21-year old web developer currently studying at
-                  STI College Global City.
+                  A 21-year old web developer currently studying at STI College
+                  Global City.
                 </p>
                 <ul class="summary-list">
                   <li>North Signal Village, Taguig City</li>
@@ -244,9 +236,7 @@
                 <div class="box-year-1">
                   <p>2019</p>
                 </div>
-                <h4 class="cert-label">
-                  TVL and Computer Programming
-                </h4>
+                <h4 class="cert-label">TVL and Computer Programming</h4>
                 <div class="box-year-1">
                   <p>2019</p>
                 </div>
@@ -254,9 +244,7 @@
                 <div class="box-year-1">
                   <p>2019</p>
                 </div>
-                <h4 class="cert-label">
-                  CODEFEST Cluster Level 2019
-                </h4>
+                <h4 class="cert-label">CODEFEST Cluster Level 2019</h4>
                 <div class="box-year-1">
                   <p>2019</p>
                 </div>
