--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="css/DesktopView.css" />
     <link rel="stylesheet" href="css/MobileView.css" />
+    <link rel="stylesheet" href="css/TabletView.css" />
     <title>Portfolio</title>
   </head>
   <body>
