makes change in nav bar for mobile and tablet view

--- a/Project.html
+++ b/Project.html
@@ -252,6 +252,52 @@
             <div class="menu">
               <div>
                 <div>
+                  <img class="profile-pic" src="./images/icon.PNG" alt="" />
+                  <h1 class="jas">Jastoni Villanueva</h1>
+                  <div class="soc-med">
+                    <a href="https://twitter.com/vjast_" target="_blank"
+                      ><div class="small-circle">
+                        <img
+                          class="icon"
+                          src="./images/twitter.svg"
+                          alt="twitter"
+                        /></div
+                    ></a>
+                    <a href="https://www.facebook.com/tjhayzz" target="_blank"
+                      ><div class="small-circle">
+                        <img
+                          class="icon"
+                          src="./images/facebook.svg"
+                          alt="twitter"
+                        /></div
+                    ></a>
+                    <a href="https://www.instagram.com/vjast_/" target="_blank"
+                      ><div class="small-circle">
+                        <img
+                          class="icon"
+                          src="./images/instagram.svg"
+                          alt="twitter"
+                        /></div
+                    ></a>
+                    <a href="https://discord.gg/4NRChBWK" target="_blank"
+                      ><div class="small-circle">
+                        <img
+                          class="icon"
+                          src="./images/discord.svg"
+                          alt="twitter"
+                        /></div
+                    ></a>
+                    <a
+                      href="https://www.linkedin.com/in/jastoni-villanueva-8a257b234/"
+                      target="_blank"
+                      ><div class="small-circle">
+                        <img
+                          class="icon"
+                          src="./images/linked.svg"
+                          alt="twitter"
+                        /></div
+                    ></a>
+                  </div>
                   <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="AboutMe.html">About Me</a></li>
