--- a/Contacts.html
+++ b/Contacts.html
@@ -11,9 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/DesktopView.css" />
-    <link rel="stylesheet" href="css/MobileView.css" />
-    <link rel="stylesheet" href="css/TabletView.css" />
-    <title>Document</title>
+    <title>Contacts</title>
   </head>
   <body>
     <div class="container">
@@ -120,7 +118,7 @@
                 >
               </li>
               <li>
-                <a class="nav-links" href="Contacts.html">
+                <a class="nav-links" href="#Contacts">
                   <img
                     class="nav-icon"
                     src="./images/envelope.svg"
@@ -142,117 +140,60 @@
           </footer>
         </div>
       </div>
-      <div class="cert-container">
-        <div class="cert-div">
-          <h2>Awards and Certificates</h2>
-          <img
-            class="cert-img"
-            src="./certificates/2017-2018.png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/2018-2019.png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/2019 (2).png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/2019 (3).png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/2019 (4).png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/2019 (5).png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/2019.png"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/SAP.PNG"
-            alt="certificate"
-          />
-          <img
-            class="cert-img"
-            src="./certificates/College Week 2021.png"
-            alt="certificate"
-          />
-        </div>
-      </div>
-      <!-- Hamburger Menu For Mobile View-->
-      <div class="menu-wrap">
-        <input type="checkbox" class="toggler" />
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
-          <div>
+      <div class="contact-container">
+        <h2>Contacts</h2>
+        <div class="contact-wrapper">
+          <div class="loc-wrapper">
             <div>
-              <img class="profile-pic" src="./images/icon.PNG" alt="" />
-              <h1 class="jas">Jastoni Villanueva</h1>
-              <div class="soc-med">
-                <a href="https://twitter.com/vjast_" target="_blank"
-                  ><div class="small-circle">
-                    <img
-                      class="icon"
-                      src="./images/twitter.svg"
-                      alt="twitter"
-                    /></div
-                ></a>
-                <a href="https://www.facebook.com/tjhayzz" target="_blank"
-                  ><div class="small-circle">
-                    <img
-                      class="icon"
-                      src="./images/facebook.svg"
-                      alt="twitter"
-                    /></div
-                ></a>
-                <a href="https://www.instagram.com/vjast_/" target="_blank"
-                  ><div class="small-circle">
-                    <img
-                      class="icon"
-                      src="./images/instagram.svg"
-                      alt="twitter"
-                    /></div
-                ></a>
-                <a href="https://discord.gg/4NRChBWK" target="_blank"
-                  ><div class="small-circle">
-                    <img
-                      class="icon"
-                      src="./images/discord.svg"
-                      alt="twitter"
-                    /></div
-                ></a>
-                <a
-                  href="https://www.linkedin.com/in/jastoni-villanueva-8a257b234/"
-                  target="_blank"
-                  ><div class="small-circle">
-                    <img
-                      class="icon"
-                      src="./images/linked.svg"
-                      alt="twitter"
-                    /></div
-                ></a>
+              <h4>Location:</h4>
+              <p>STI College Global City</p>
+            </div>
+            <div>
+              <h4>Email:</h4>
+              <p>vjastoni13@gmail.com</p>
+            </div>
+            <div>
+              <h4>Call:</h4>
+              <p>09452272264</p>
+            </div>
+            <div>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.8187500693875!2d121.05388821537329!3d14.552355182157285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c8f34dcf2a31%3A0xb94e4975d83d70f5!2sSTI%20College%20-%20Global%20City!5e0!3m2!1sen!2sph!4v1652181104785!5m2!1sen!2sph"
+                width="400"
+                height="300"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+          </div>
+          <div class="message-wrapper">
+            <div class="row-splitter">
+              <div class="splitter">
+                Your Name
+                <input class="field-size" type="text" id="name" />
               </div>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="AboutMe.html">About Me</a></li>
-                <li><a href="Profile.html">Profile</a></li>
-                <li><a href="Project.html">Project</a></li>
-                <li><a href="Certificates.html">Certificates</a></li>
-                <li><a href="#Contacts">Contact</a></li>
-              </ul>
+              <div class="splitter">
+                Your Email
+                <input class="field-size" type="email" id="email" />
+              </div>
+            </div>
+            <div class="splitter">
+              Subject
+              <input class="field-sizes" type="text" id="subject" />
+            </div>
+            <div class="splitter">
+              Message
+              <textarea
+                class="textArea-size"
+                id="w3review"
+                name="w3review"
+                rows="12"
+              ></textarea>
+            </div>
+            <div class="button-pos">
+              <input class="button-des" type="submit" value="Send Message" />
             </div>
           </div>
         </div>
