--- a/Profile.html
+++ b/Profile.html
@@ -120,7 +120,7 @@
                 >
               </li>
               <li>
-                <a class="nav-links" href="#Contacts">
+                <a class="nav-links" href="Contacts.html">
                   <img
                     class="nav-icon"
                     src="./images/envelope.svg"
