adds links to tablet view

--- a/Contacts.html
+++ b/Contacts.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/DesktopView.css" />
+    <link rel="stylesheet" href="css/MobileView.css" />
+    <link rel="stylesheet" href="css/TabletView.css" />
     <title>Contacts</title>
   </head>
   <body>
@@ -118,7 +120,7 @@
                 >
               </li>
               <li>
-                <a class="nav-links" href="#Contacts">
+                <a class="nav-links" href="Contacts.html">
                   <img
                     class="nav-icon"
                     src="./images/envelope.svg"
@@ -158,6 +160,7 @@
             </div>
             <div>
               <iframe
+                class="map-size"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3861.8187500693875!2d121.05388821537329!3d14.552355182157285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c8f34dcf2a31%3A0xb94e4975d83d70f5!2sSTI%20College%20-%20Global%20City!5e0!3m2!1sen!2sph!4v1652181104785!5m2!1sen!2sph"
                 width="400"
                 height="300"
@@ -194,6 +197,71 @@
             </div>
             <div class="button-pos">
               <input class="button-des" type="submit" value="Send Message" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Hamburger Menu For Mobile View-->
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler" />
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+          <div>
+            <div>
+              <img class="profile-pic" src="./images/icon.PNG" alt="" />
+              <h1 class="jas">Jastoni Villanueva</h1>
+              <div class="soc-med">
+                <a href="https://twitter.com/vjast_" target="_blank"
+                  ><div class="small-circle">
+                    <img
+                      class="icon"
+                      src="./images/twitter.svg"
+                      alt="twitter"
+                    /></div
+                ></a>
+                <a href="https://www.facebook.com/tjhayzz" target="_blank"
+                  ><div class="small-circle">
+                    <img
+                      class="icon"
+                      src="./images/facebook.svg"
+                      alt="twitter"
+                    /></div
+                ></a>
+                <a href="https://www.instagram.com/vjast_/" target="_blank"
+                  ><div class="small-circle">
+                    <img
+                      class="icon"
+                      src="./images/instagram.svg"
+                      alt="twitter"
+                    /></div
+                ></a>
+                <a href="https://discord.gg/4NRChBWK" target="_blank"
+                  ><div class="small-circle">
+                    <img
+                      class="icon"
+                      src="./images/discord.svg"
+                      alt="twitter"
+                    /></div
+                ></a>
+                <a
+                  href="https://www.linkedin.com/in/jastoni-villanueva-8a257b234/"
+                  target="_blank"
+                  ><div class="small-circle">
+                    <img
+                      class="icon"
+                      src="./images/linked.svg"
+                      alt="twitter"
+                    /></div
+                ></a>
+              </div>
+              <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
+                <li><a href="Profile.html">Profile</a></li>
+                <li><a href="Project.html">Project</a></li>
+                <li><a href="Certificates.html">Certificates</a></li>
+                <li><a href="Contacts.html">Contact</a></li>
+              </ul>
             </div>
           </div>
         </div>
