--- a/AboutMe.html
+++ b/AboutMe.html
@@ -120,7 +120,7 @@
                 >
               </li>
               <li>
-                <a class="nav-links" href="#Contacts">
+                <a class="nav-links" href="Contacts.html">
                   <img
                     class="nav-icon"
                     src="./images/envelope.svg"
@@ -304,7 +304,7 @@
                 <li><a href="Profile.html">Profile</a></li>
                 <li><a href="Project.html">Project</a></li>
                 <li><a href="Certificates.html">Certificates</a></li>
-                <li><a href="#Contacts">Contact</a></li>
+                <li><a href="Contacts.html">Contact</a></li>
               </ul>
             </div>
           </div>
