--- a/Certificates.html
+++ b/Certificates.html
@@ -251,7 +251,7 @@
                 <li><a href="Profile.html">Profile</a></li>
                 <li><a href="Project.html">Project</a></li>
                 <li><a href="Certificates.html">Certificates</a></li>
-                <li><a href="#Contacts">Contact</a></li>
+                <li><a href="Contacts.html">Contact</a></li>
               </ul>
             </div>
           </div>
