--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 >
               </li>
               <li>
-                <a class="nav-links" href="#Contacts">
+                <a class="nav-links" href="Contacts.html">
                   <img
                     class="nav-icon"
                     src="./images/envelope.svg"
@@ -224,7 +224,7 @@
                 <li><a href="Profile.html">Profile</a></li>
                 <li><a href="Project.html">Project</a></li>
                 <li><a href="Certificates.html">Certificates</a></li>
-                <li><a href="#Contacts">Contact</a></li>
+                <li><a href="Contacts.html">Contact</a></li>
               </ul>
             </div>
           </div>
