edits link in project html

--- a/Project.html
+++ b/Project.html
@@ -60,7 +60,7 @@
               ><div class="small-circle">
                 <img
                   class="icon"
-                  src="../images/linked.svg"
+                  src="./images/linked.svg"
                   alt="twitter"
                 /></div
             ></a>
@@ -73,7 +73,7 @@
                 <a class="nav-links" href="index.html">
                   <img
                     class="nav-icon"
-                    src="../images/home.svg"
+                    src="./images/home.svg"
                     alt="home icon"
                   />
                   &nbsp; Home</a
@@ -83,7 +83,7 @@
                 <a class="nav-links" href="AboutMe.html">
                   <img
                     class="nav-icon"
-                    src="../images/user.svg"
+                    src="./images/user.svg"
                     alt="user icon"
                   />
                   &nbsp; About Me</a
@@ -93,7 +93,7 @@
                 <a class="nav-links" href="Profile.html">
                   <img
                     class="nav-icon"
-                    src="../images/file.svg"
+                    src="./images/file.svg"
                     alt="file icon"
                   />
                   &nbsp; Profile</a
@@ -103,7 +103,7 @@
                 <a class="nav-links" href="Project.html">
                   <img
                     class="nav-icon"
-                    src="../images/folder.svg"
+                    src="./images/folder.svg"
                     alt="folder icon"
                   />
                   &nbsp; Portfolio</a
@@ -113,7 +113,7 @@
                 <a class="nav-links" href="Certificates.html">
                   <img
                     class="nav-icon"
-                    src="../images/server.svg"
+                    src="./images/server.svg"
                     alt="server icon"
                   />
                   &nbsp;Certificates</a
@@ -123,7 +123,7 @@
                 <a class="nav-links" href="Contacts.html">
                   <img
                     class="nav-icon"
-                    src="../images/envelope.svg"
+                    src="./images/envelope.svg"
                     alt="envelope icon"
                   />
                   &nbsp; Contact</a
@@ -148,7 +148,7 @@
           <div class="project-section">
             <h3>Mobile Application: Diaeta</h3>
             <div class="row-split">
-              <img id="diaeta" src="../projects/Diaeta.png" alt="" />
+              <img id="diaeta" src="./projects/Diaeta.png" alt="" />
               <div class="mid">
                 <p>
                   Diaeta is a simple, user-friendly weight loss app that focuses
@@ -172,7 +172,7 @@
           <div class="project-section">
             <h3>Restaurant Management System</h3>
             <div class="row-split">
-              <img id="rms" src="../projects/RMS.png" alt="" />
+              <img id="rms" src="./projects/RMS.png" alt="" />
               <div class="mid">
                 <p>
                   A restaurant management system (RMS) is a sort of
@@ -196,7 +196,7 @@
           <div class="project-section">
             <h3>Web Based: Basic Calculator</h3>
             <div class="row-split">
-              <img id="calc" src="../projects/Basic Calculator.PNG" alt="" />
+              <img id="calc" src="./projects/Basic Calculator.PNG" alt="" />
               <div class="mid">
                 <p>
                   This is a web-based calculator that I have made using HTML,
@@ -216,7 +216,7 @@
               <img
                 id="digis"
                 class="digiserve"
-                src="../projects/Digiserve.PNG"
+                src="./projects/Digiserve.PNG"
                 alt=""
               />
               <div class="mid">
@@ -236,7 +236,7 @@
               <img
                 id="thesis"
                 class="datacom"
-                src="../projects/Data Com.png"
+                src="./projects/Data Com.png"
                 alt=""
               />
               <div class="mid">
