adds minor changes

--- a/Project.html
+++ b/Project.html
@@ -206,7 +206,13 @@
                   and the reason behind developing this simple calculator was to
                   enhance my knowledge of using the Javascript language.
                 </p>
-                <button class="button-container">Go to Link</button>
+                <a
+                  class="noLine"
+                  href="https://vjastoni.github.io/simpleCalculator/"
+                  target="_blank"
+                >
+                  <button class="button-container">Go to Link</button></a
+                >
               </div>
             </div>
           </div>
@@ -220,7 +226,11 @@
                 alt=""
               />
               <div class="mid">
-                <p>Description</p>
+                <p>
+                  Real-Time Scheduling when the student or user reservation is
+                  made, the system can reserve the date for when they would like
+                  to consult their respective professor or department.
+                </p>
                 <a
                   class="noLine"
                   href="https://github.com/vjastoni/DigiServe"
