--- a/Project.html
+++ b/Project.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/DesktopView.css" />
     <link rel="stylesheet" href="css/MobileView.css" />
     <link rel="stylesheet" href="css/TabletView.css" />
+    <link rel="stylesheet" href="css/LaptopView.css" />
     <title>Project</title>
   </head>
   <body>
