--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 " />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/DesktopView.css" />
     <link rel="stylesheet" href="css/MobileView.css" />
     <link rel="stylesheet" href="css/TabletView.css" />
+    <link rel="stylesheet" href="css/LaptopView.css" />
     <title>Portfolio</title>
   </head>
   <body>
