adds icon in about me page

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -225,21 +225,39 @@
         </div>
         <div class="skill-container">
           <div class="skill-left">
-            <p class="label">HTML - 90%</p>
+            <div class="skill-div">
+              <img class="skill-icon" src="./images/html.png" />
+              <p class="label">HTML - 90%</p>
+            </div>
             <div class="progress"><div class="fill-html"></div></div>
-            <p class="label">JAVASCRIPT - 60%</p>
+            <div class="skill-div">
+              <img class="skill-icon" src="./images/js.jpg" />
+              <p class="label">JAVASCRIPT - 60%</p>
+            </div>
             <div class="progress"><div class="fill-js"></div></div>
-            <p class="label">CSS - 85%</p>
+            <div class="skill-div">
+              <img class="skill-icon" src="./images/css.png" />
+              <p class="label">CSS - 85%</p>
+            </div>
             <div class="progress"><div class="fill-css"></div></div>
           </div>
           <div class="skill-right">
-            <p class="label">JAVA - 85%</p>
+            <div class="skill-div">
+              <img class="skill-icon" src="./images/java.png" />
+              <p class="label">JAVA - 85%</p>
+            </div>
             <div class="progress"><div class="fill-java"></div></div>
-            <p class="label">PYTHON - 65%</p>
+            <div class="skill-div">
+              <img class="skill-icon" src="./images/python.png.crdownload" />
+              <p class="label">PYTHON - 65%</p>
+            </div>
             <div class="progress">
               <div class="fill-python"></div>
             </div>
-            <p class="label">C# - 85%</p>
+            <div class="skill-div">
+              <img class="skill-icon" src="./images/c.png" />
+              <p class="label">C# - 85%</p>
+            </div>
             <div class="progress">
               <div class="fill-csharp"></div>
             </div>
