fixes laptop view

--- a/Certificates.html
+++ b/Certificates.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/MobileView.css" />
     <link rel="stylesheet" href="css/TabletView.css" />
     <link rel="stylesheet" href="css/LaptopView.css" />
-    <title>Document</title>
+    <title>Certificates</title>
   </head>
   <body>
     <div class="container">
