--- a/Project.html
+++ b/Project.html
@@ -251,8 +251,15 @@
                 alt=""
               />
               <div class="mid">
-                <p>Description</p>
-                <button class="button-container">Go to Link</button>
+                <p>
+                  This is a sample floor plan that we made during the first
+                  semester on the subject of Data Communication. It was part of
+                  our network Proposal entitled " Design and Implementation of
+                  an Enterprise Network System for Tier One Company"
+                </p>
+                <a class="noLine" href="./projects/Data Com.png" target="_blank"
+                  ><button class="button-container">Go to Link</button></a
+                >
               </div>
             </div>
           </div>
