resize the progress bar in about me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -248,7 +248,7 @@
             </div>
             <div class="progress"><div class="fill-java"></div></div>
             <div class="skill-div">
-              <img class="skill-icon" src="./images/python.png.crdownload" />
+              <img class="skill-icon" src="./images/python.png" />
               <p class="label">PYTHON - 65%</p>
             </div>
             <div class="progress">
