adds cv button in index

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
             STI College Global City.
           </p>
           <p class="works">
-            Know More
+            <a class="span-link" href=""
+              ><span class="span"> Check CV </span></a
+            >
+            &nbsp;
             <a href="#carousel-wrapper">
               <button class="button">Recent Works</button>
             </a>
