adds link for curriculum vitae

--- a/index.html
+++ b/index.html
@@ -156,7 +156,10 @@
             STI College Global City.
           </p>
           <p class="works">
-            <a class="span-link" href=""
+            <a
+              class="span-link"
+              href="./resume/resume.pdf"
+              download="Curriculum Vitae"
               ><span class="span"> Check CV </span></a
             >
             &nbsp;
